--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         ?!
     </p>
 
+    <div>
+        <a href="About.html">About Page</a>
+    </div>
+
     <a href="http://google.com">The rest of the internet</a>
     <hr>
     <div>
@@ -58,3 +62,4 @@
     </ul>
 </body>
 </html>
+
