--- a/index.html
+++ b/index.html
@@ -1,65 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>The Tour du Mont Blanc Webpage</title>
+    <title>Best 90s website in 2020</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-   <h1>This is my very first website!</h1>
-
-    <h2>This is my subheader</h2>
-
-    <p>
-        Isn't it 
-        <strong>really</strong> 
-        <em>awesome</em>
-        ?!
-    </p>
-
-    <div>
-        <a href="About.html">About Page</a>
-    </div>
-
-    <a href="http://google.com">The rest of the internet</a>
-    <hr>
-    <div>
-        <img src = "TMB.jpg" width="40%">
-    </div>
-
+    <h1>The KIEI 451 Website!</h1>
+    <h2 id="header2">Best 90s website in 2020</h2>
 
     <table>
         <tr>
-            <td>I'm in Row 1, Cell 1</td>
-            <td>I'm in Row 1, Cell 2</td>
-        </tr>
-        <tr>
-            <td>I'm in Row 2, Cell 1</td>
-            <td>I'm in Row 2, Cell 2</td>
+           <td>
+               <a href="index.html">Home</a>
+           </td>
+            <td>
+                <a href="about.html">Our About Page</a>
+            </td>
         </tr>
     </table>
 
-    <hr>
+   
+    <p id="first">
+        This class is gonna be <em>soooooooooo</em> <strong>awesome</strong>!
+    </p>
 
-    <div>
-        <strong>Stops Along The Tour Du Mont Blanc:</strong> 
+    <p class="right tacos">
+        We have <span class="big"> 30 hours </span> to learn <strong>ALL THE THINGS</strong> &#128561 &#128561 &#128561
+    </p>
+
+    <p class="right">
+        So far we've learned <code>HTML</code>.
+        <br>
+        <span class="big"> Our websites</span> look like they're from <a
+            href="https://www.bustle.com/articles/159061-10-things-we-genuinely-miss-about-90s-internet-because-nostalgia-runs-deep">the
+            90s</a>.
+    </p>
+    <p>
+    <div class="right tacos"> MY IMAGES:</span>
+        <span class="big">
+        <img src="TMB Route.jpg" alt="">
+        <img src="TMB.jpg" alt="">
+ 
     </div>
-
-    <ol>
-        <li>Chamonix</li>
-        <li>Les Houches</li>
-        <li>Les Contamines</li>
-        <li>Courmayer</li>
-    </ol>
-
-    <div>
-        <strong>
-        <em>Packing List</em>
-        </strong>
-    </div>
-    <ul>
-        <li>Backpack</li>
-        <li>Hiking Poles</li>
-        <li>Water Bottle</li>
-    </ul>
+    </p>
 </body>
-</html>
 
+</html>
