--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-    <title>Best 90s website in 2020</title>
+    <!-- Google Fonts -->
+    <!-- Swap out "Roboto" for the font(s) you want to use -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
+    <!-- Your own CSS -->
     <link rel="stylesheet" href="styles.css">
-</head>
 
-<body>
-    <h1>The KIEI 451 Website!</h1>
-    <h2 id="header2">Best 90s website in 2020</h2>
+    <title>NOLS 2020</title>
+  </head>
+  <body>
+    <!-- Your stuff goes here -->
 
-    <table>
-        <tr>
-           <td>
-               <a href="index.html">Home</a>
-           </td>
-            <td>
-                <a href="about.html">Our About Page</a>
-            </td>
-        </tr>
-    </table>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">NOLS 2020</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+            <a class="nav-item nav-link" href="#">Contact Us</a>
 
-   
-    <p id="first">
-        This class is gonna be <em>soooooooooo</em> <strong>awesome</strong>!
-    </p>
+          </div>
+        </div>
+      </nav>
 
-    <p class="right tacos">
-        We have <span class="big"> 30 hours </span> to learn <strong>ALL THE THINGS</strong> &#128561 &#128561 &#128561
-    </p>
+      <div class="jumbotron">
+        <h1 class="display-4">Kellogg NOLS Trip 2020</h1>
+        <p class="lead">Learn leadership skills while exploring beautiful chilean Patagonia</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn About Pricing</a>
+      </div>
 
-    <p class="right">
-        So far we've learned <code>HTML</code>.
-        <br>
-        <span class="big"> Our websites</span> look like they're from <a
-            href="https://www.bustle.com/articles/159061-10-things-we-genuinely-miss-about-90s-internet-because-nostalgia-runs-deep">the
-            90s</a>.
-    </p>
-    <p>
-    <div class="right tacos"> MY IMAGES:</span>
-        <span class="big">
-        <img src="TMB Route.jpg" alt="">
-        <img src="TMB.jpg" alt="">
- 
-    </div>
-    </p>
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 </html>
