--- a/Register.html
+++ b/Register.html
@@ -17,30 +17,30 @@
     <!-- Your own CSS -->
     <link rel="stylesheet" href="styles.css">
 
-    <title>Register</title>
+    <title>Sign Up</title>
   </head>
   <body>
     <!-- Your stuff goes here -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <i class="fas fa-mountain"></i>
-        <a class="navbar-brand" href="#">Tour du Mont Blanc</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="Trip Details.html">Trip Details</a>
-            <a class="btn btn-outline-secondary" href="Register.html">Sign Up</a>
-
-          </div>
+      <i class="fas fa-mountain"></i>
+      <a class="navbar-brand" href="#">Tour du Mont Blanc</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="Trip Details.html">Trip Details</a>
+          <a class="btn btn-outline-secondary active" href="Register.html">Sign Up</a>
+          
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <div class="container text-center">
         <h1>Interested?</h1>
-        <h4>Sign up to receive more infromation about specific dates and pricing of the trip,</h4>
+        <h4>Sign up to receive more infromation about specific dates and pricing of the trip.</h4>
       </div>
   
       <div class="container my-5">
@@ -82,5 +82,20 @@
         </form>
       </div>
 
+      <hr class="my-4">
+            
+      <div class="container footer">
+        <div class="row my-3">
+          <div class="col-sm-6">
+          </div>
+          <div class="col-sm-3">
+          </div>
+          <div class="col-sm-3">
+            <h6>Established 2020</h6>
+          </div>
+        </div>
+      </div>
 
-  
+
+  </body>
+</html>  
