--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="jumbotron">
         <h1 class="display-4">Hike the Tour du Mont Blanc</h1>
         <p class="lead"></p>
-        <h3 class="align-center">Spend 5-12 days hiking hut to hut in the European Alps on one of the most famous hiking trails in the world!</h3>
+        <h3 class="align-center"><strong>Spend 5-12 days hiking hut to hut in the European Alps on one of the most famous hiking trails in the world!</strong></h3>
 
       </div>
 
@@ -81,7 +81,7 @@
                     <li>Tre Le Champ</li>
                 </ul>   
             </list>
-              <p>Exact stops subject to change depending on availability.</p>
+              <p><em> Exact stops subject to change depending on availability.</em> </p>
             </div>
             <div class="col-sm-4 text-center">
               <h1><i class="fas fa-hiking"></i></h1>
@@ -91,39 +91,23 @@
           </div>
       </div>
 
-      <hr class="my-4">
-
-      <div>
-        <h2>Pictures from the Tour du Mont Blanc</h2>
-        <h3>Summer 2020</h3>
-      </div>
-
       <div class="carousel">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="MTN1.JPG" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="MTN2.JPG" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="MTN3.JPG" class="d-block w-100" alt="...">
-            </div>
+        <h2>Pictures from the Tour du Mont Blanc</h2>
+        <h3><em>Summer 2020</em></h3>
+        <div id="carouselslidesonly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
             <div class="carousel-item">
                 <img src="MTN4.JPG" class="d-block w-100" alt="...">
             </div>
+            <div class="carousel-item active">
+              <img src="MTN2.JPG" class="d-block w-100" alt="...">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
+            <div class="carousel-item">
+              <img src="MTN3.JPG" class="d-block w-100" alt="...">
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
       <hr class="my-4">
             
       <div class="container footer">
